--- a/FrontPages.tex
+++ b/FrontPages.tex
@@ -2,7 +2,7 @@
 \rollNumber{114CS0100}
 \authorGender{male}		%%Author's gender: male or female
 \department{Department of Computer Science and Engineering}
-\docTitle{Memory Efficient Incremental Outlier Detection in Streaming Data}
+\docTitle{Anomaly Detection in Streaming Data}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
