--- a/Ref/SampleReferences.bib
+++ b/Ref/SampleReferences.bib
@@ -1,110 +1,46 @@
 %%%%%%%%%%%% References %%%%%%%%%%%%%%%%%%%%%%%
-@ARTICLE{Lowe, 
-author={Lowe, D.}, 
-journal={International Journal of Computer Vision}, 
-title={Distinctive image features from scale-invariant keypoints}, 
-month={February}, 
-year={2004}, 
-volume={60}, 
-number={2}, 
-pages={91~-~110}
+BibTeX | EndNote | ACM Ref
+@article{Chandola:2009:ADS:1541880.1541882,
+ author = {Chandola, Varun and Banerjee, Arindam and Kumar, Vipin},
+ title = {Anomaly Detection: A Survey},
+ journal = {ACM Comput. Surv.},
+ issue_date = {July 2009},
+ volume = {41},
+ number = {3},
+ month = jul,
+ year = {2009},
+ issn = {0360-0300},
+ pages = {15:1--15:58},
+ articleno = {15},
+ numpages = {58},
+ url = {http://doi.acm.org/10.1145/1541880.1541882},
+ doi = {10.1145/1541880.1541882},
+ acmid = {1541882},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Anomaly detection, outlier detection},
 }
 
-@ARTICLE{Shannon, 
-author={Shannon, Claude E}, 
-journal={Bell System Technical Journal}, 
-title={A Mathematical Theory of Communication}, 
-year={1948}, 
-month={July}, 
-volume={27}, 
-number={3}, 
-pages={379~-~423}
-}
 
-@phdthesis{Sutherland,
-author = {Ivan Edward Sutherland},
-title = {Sketchpad, a man-machine graphical communication system},
-school = {Massachusetts Institute of Technology},
-year = {1963},
-month = {January},
-url = {http://hdl.handle.net/1721.1/14979}
-}
+@article{Breunig:2000:LID:335191.335388,
+ author = {Breunig, Markus M. and Kriegel, Hans-Peter and Ng, Raymond T. and Sander, J\"{o}rg},
+ title = {LOF: Identifying Density-based Local Outliers},
+ journal = {SIGMOD Rec.},
+ issue_date = {June 2000},
+ volume = {29},
+ number = {2},
+ month = may,
+ year = {2000},
+ issn = {0163-5808},
+ pages = {93--104},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/335191.335388},
+ doi = {10.1145/335191.335388},
+ acmid = {335388},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {database mining, outlier detection},
+} 
 
-@phdthesis{Dhawan,
-author = {Satish Dhawan},
-title = {Direct measurements of skin friction},
-school = {California Institute of Technology},
-year = {1951},
-month = {January},
-url = {http://resolver.caltech.edu/CaltechETD:etd-09262002-155504}
-}
-
-@misc{BulbE,
-author = {Thomas A. Edison},
-title = {Manufacture of carbon filaments},
-day = {8},
-month = {November},
-year = {1892},
-note = {{US} Patent US485616A}
-}
-
-@misc{ViBEpatent,
-author = {Marc Van Droogenbroeck and Olivier Barnich},
-title = {Visual background extractor},
-note = {{US} Patent US20100208998A1},
-day = {19},
-month = {August},
-year = {2010}
-}
-
-@Misc{nasa,
-author = {NASA},
-title = {Mariner 4, {NSSDC ID: 1964-077A}},
-year = {1964},
-note = {National Space Science Data Center, \url{http://nssdc.gsfc.nasa.gov/nmc/spacecraftDisplay.do?id=1964-077A}}
-}
-
-@Misc{Kodak,
-author = {Gabriel Fielding},
-title = {Digital {ICE}: {D}efect detection and correction using infrared-enabled scanners},
-year = {2007},
-note = {Eastman Kodak Company, \url{http://www.motion.kodak.com/motion/hub/itp/dice/default.htm}}
-}
-
-@InProceedings{Toyama, 
-	author={K. Toyama and J. Krumm and B. Brumitt and B. Meyers}, 
-	booktitle={Proceedings of International Conference on Computer Vision}, 
-	title={Wallflower: {P}rinciples and practice of background maintenance}, 
-	series = {ICCV~-~1999},
-	address = {Kerkyra, Greece},
-	year={1999}, 
-	month={September},
-	pages={255~-~261}
-}
-
-@InProceedings{icra,
-	author = {M. C. Lin and J. F. Canny},
-	booktitle = {International Conference on Robotics and Automation},
-	title = {A fast algorithm for incremental distance calculation },
-	series = {ICRA~-~1991},
-	address = {Los Alamitos, USA},
-	year = {1991},
-	month = {April},
-	pages = {1008~-~1014}
-}
-
-@book{Vapnik,
-author = "Vladimir N. Vapnik",
-title = "The nature of statistical learning theory",
-publisher = "Springer-Verlag, New York",
-year = "1995"
-}
-
-@book{p00e,
-author = "Anil K. Jain",
-title = "Fundamentals of digital image processing",
-publisher = "Prentice-Hall of India",
-year = "1989"
-}
 
 %%%%%%%%%%%%%%%%%%%%%%%%% The End %%%%%%%%%%%%%%%%%%%%
