--- a/DissertationGuidelinesV4_5.tex
+++ b/DissertationGuidelinesV4_5.tex
@@ -77,40 +77,38 @@
 \thispagestyle{empty}
 \cleardoublepage
 
-\input{Chap04/Results}
-\thispagestyle{empty}
-\cleardoublepage
+%\input{Chap04/Results}
+%\thispagestyle{empty}
+%\cleardoublepage
 
 
 \input{Chap05/Conclusion}
 \thispagestyle{empty}
 \cleardoublepage
 
-\input{Chap06/References}
-\thispagestyle{empty}
-\cleardoublepage
+%\input{Chap06/References}
+%\thispagestyle{empty}
+%\cleardoublepage
 
 
-%\rhead{\textit{References}}
-%\lhead{}
-%\renewcommand\bibname{References}
+\rhead{\textit{References}}
+\lhead{}
+\renewcommand\bibname{References}
 
 %%%\bibliographystyle{Ref/IEEEtran}
-%\bibliographystyle{Ref/asme}
+\bibliographystyle{Ref/asme}
 %%%\bibliographystyle{Ref/naturemag}
 %%%\bibliographystyle{Ref/bmes}
 %%%\bibliographystyle{Ref/achemso}
 %%%\bibliographystyle{Ref/rsc}
 %%%\bibliographystyle{Ref/osajnl}
 %%
-%{
-%	\fontsize{10}{12}
-%	\selectfont
-%	\addcontentsline{toc}{chapter}{References}
-%	\bibliography{Ref/SampleReferences}
-%	\footnotetext{This reference format follows ASME style. You are advised to follow one reference format of any dominant journal of your field.}
-
-%\cleardoublepage
+{
+	\fontsize{10}{12}
+	\selectfont
+	\addcontentsline{toc}{chapter}{References}
+	\bibliography{Ref/SampleReferences}
+\cleardoublepage
 %%% % % % % % % % % % % % % % % % % % % % % % % % % % %
 %%% % % % % % % % % % % % % % % % % % % % % % % % % % %
 
